--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
     </main>
 
       <footer>
+        <div class="container-fluid bg-primary text-light rounded-top position-absolute top-100 start-50 translate-middle">
+          <div class="row">
+            <div class="col">
+                <p title="produzido por Thiago A. Manzoni">Produzido por Thiago A. Manzoni</p>
+            </div>
+          </div>
+        </div>
       
         
       </footer>
